RESOLVED FIXED91277
NodeLists should not invalidate on irreleavnt attribute changes
https://bugs.webkit.org/show_bug.cgi?id=91277
Summary NodeLists should not invalidate on irreleavnt attribute changes
Ryosuke Niwa
Reported 2012-07-13 14:06:25 PDT
Merge invalidateNodeListsCacheAfterAttributeChanged and invalidateNodeListsCacheAfterChildrenChanged
Attachments
Patch (17.28 KB, patch)
2012-07-13 14:33 PDT, Ryosuke Niwa
ojan: review+
Ryosuke Niwa
Comment 1 2012-07-13 14:33:29 PDT
Ojan Vafai
Comment 2 2012-07-13 15:04:10 PDT
Comment on attachment 152330 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=152330&action=review > Source/WebCore/dom/ContainerNode.cpp:683 > + invalidateNodeListCachesInAncestors(0, 0); Can you create local variables for these 0's so that it's clear what the arguments are?
Ryosuke Niwa
Comment 3 2012-07-13 15:06:44 PDT
Comment on attachment 152330 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=152330&action=review Thanks for the review! >> Source/WebCore/dom/ContainerNode.cpp:683 >> + invalidateNodeListCachesInAncestors(0, 0); > > Can you create local variables for these 0's so that it's clear what the arguments are? Oh oops, I meant to add default values of 0 so that we can omit those 0s. Will fix before landing it.
Ryosuke Niwa
Comment 4 2012-07-13 15:44:50 PDT
Ryosuke Niwa
Comment 5 2012-07-13 17:44:38 PDT
Removed an erroneous assertion in http://trac.webkit.org/changeset/122649.
Note You need to log in before you can comment on or make changes to this bug.